# haioc

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
haioc/csrc/ops/: cdist.cpp  cdist.h  experimental.cpp  fill_if_eq_any.cpp  fill_if_eq_any.h  ops.h
haioc/csrc/ops/autocast/: any_eq_any_kernel.cpp  cdist_kernel.cpp  fill_if_eq_any_kernel.cpp
haioc/csrc/ops/autograd/: any_eq_any_kernel.cpp  cdist_kernel.cpp  fill_if_eq_any_kernel.cpp
haioc/csrc/ops/cpu/: any_eq_any_kernel.cpp  cdist_kernel.cpp  cpu_helpers.h  fill_if_eq_any_kernel.cpp  signum.h
haioc/csrc/ops/cuda/: any_eq_any_kernel.cu  cdist_kernel.cu  cuda_helpers.h  fill_if_eq_any_kernel.cu  signum.cuh
haioc/csrc/ops/utils/: dispatch.h  scalar_type_utils.h  scalar_types_utils.h
haioc/ops/: __init__.py  any_eq.py  cdist.py  fill_if_eq_any.py
tests/: test_cdist.py  test_haioc.py  test_omp.py  test_ops.py  test_preprocess.py
tests/test_utils/: __init__.py  time_meter.py
